Updated some routes
